// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when fetching resources loading spinner matches the snapshot 1`] = `
<tr>
  <td>
    foo
  </td>
  <td
    colSpan={0}
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when fetching resources loading spinner matches the snapshot 2`] = `
<tr>
  <td>
    foo
  </td>
  <td
    colSpan={0}
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when there is a valid resouce renders info about the resource status 1`] = `
<tr>
  <td>
    foo
  </td>
  <td
    key="replicas"
  >
    1
  </td>
  <td
    key="updatedReplicas"
  >
    1
  </td>
  <td
    key="availableReplicas"
  >
    1
  </td>
</tr>
`;
